--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,13 @@
 {
     "env": {
         "browser": true,
-        "node": true,
-        "es6": true
+        "es2021": true
     },
-    "extends":[
-        "airbnb-base"
+    "extends": "airbnb-base",
+    "overrides": [
     ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
     "parserOptions": {
-        "ecmaVersion": 2018,
+        "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "rules": {
@@ -21,5 +16,5 @@
         "no-underscore-dangle": 0,
         "no-restricted-globals": 0,
         "linebreak-style": 0
-      }
+    }
 }
