--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "idb": "^7.1.1",
     "regenerator-runtime": "^0.13.11",
     "workbox-window": "^6.5.4"
