--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint": "^8.41.0",
     "html-webpack-plugin": "^5.5.1",
     "http-server": "^14.1.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
