--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "build-image": "node sharp.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "http-server": "^14.1.1",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
+    "sharp": "^0.32.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
