--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "idb": "^7.1.1",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.11",
     "workbox-window": "^6.5.4"
   }
