--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
+    "test": "karma start",
     "lint": "eslint ./src",
-    "build-image": "node sharp.js"
+    "build-image": "node sharp.js",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,9 @@
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
+    "@types/node": "^20.2.5",
     "babel-loader": "^9.1.2",
+    "codeceptjs": "^3.4.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.4",
     "eslint": "^8.41.0",
@@ -24,9 +28,20 @@
     "http-server": "^14.1.1",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
+    "jasmine-ajax": "^4.0.0",
+    "jasmine-core": "^5.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-webpack": "^5.0.0",
+    "puppeteer": "^20.5.0",
     "sharp": "^0.32.1",
     "style-loader": "^3.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3",
     "webpack": "^5.83.1",
+    "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
     "webpack-merge": "^5.9.0",
