--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,10 +11,25 @@
         "sourceType": "module"
     },
     "rules": {
-        "import/no-extraneous-dependencies": 0,
-        "no-console": 0,
-        "no-underscore-dangle": 0,
-        "no-restricted-globals": 0,
-        "linebreak-style": 0
+        "no-console": "off",
+        "no-param-reassign": "off",
+        "no-plusplus": "off",
+        "no-restricted-syntax": "off",
+        "no-underscore-dangle": "off",
+        "linebreak-style": "off",
+        "eol-last": "off",
+        "import/no-extraneous-dependencies": "off",
+        "no-unused-vars": "off",
+        "import/prefer-default-export": "off",
+        "import/no-import-module-exports": "off",
+        "no-shadow":"off",
+        "import/order": "off",
+        "max-len":"off",
+        "no-useless-constructor":"off",
+        "no-undef": 0,
+        "no-return-assign": 0,
+        "consistent-return": 0,
+        "no-prototype-builtins": 0,
+        "no-restricted-globals": 0
     }
 }
